fix the div vetical align middle issue

--- a/app/styles/core.less
+++ b/app/styles/core.less
@@ -8,7 +8,6 @@ body {
 .view, .demo-page {
 	height: 100%;
 }
-
 .demo-page {
 	display: flex;
 	justify-content: center; /* align horizontal */
@@ -27,7 +26,7 @@ body {
 }
 
 .h1 {
-	font-size: 1.5em;
+	font-size: @default-font-size;
 }
 .navbar-custom {
 	background: #ccc;
@@ -41,7 +40,7 @@ body {
 	display: block;
 	width: 100%;
 	background-color: #142441;
-	color: #fff;
+	color: @base-color;
 	word-wrap: break-word;
 	border:0;
 }
@@ -49,33 +48,26 @@ body {
 	height: 100%;
 	width: 100%;
 }
-.center-obj {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate3d(-50%,-50%,0);
-    transform: translate3d(-50%,-50%,0);
-    text-align: center;
-}
 .welcom-pic {
-	height: 200px;
-	width: 270px;
-	background:url('../images/car.png');
-	background-size: cover;
+	height: 18em;
+	background:url('../images/car.png') no-repeat center center;
+	background-size: contain;
+	margin-top: 15em;
 }
 .cbtn {
 	width: 160px;
 	height: 42px;
-	border:1px solid #d5eefe;
+	border:1px solid @base-color;
 	display: block;
 	line-height: 42px;
 	margin: 20px auto;
 	color: #fff;
+	font-size: @default-font-size;
 }
 .cbtn:hover {
 	text-decoration: none;
-	color: #999;
+	color: @hover-color;
 }
 .text-default {
-	color: #111;
+	color: @text-default-color;
 }
