--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -11,6 +11,8 @@
 // Loader
 @loader-size: 100px;
 
+@default-font-size: 1.5em;
+
 // Gray and Brand Colors for use across theme
 
 @theme-primary:    #337ab7; //#F05F40;
@@ -21,3 +23,9 @@
 @gray:             lighten(@gray-base, 33.5%); // #555
 @gray-light:       lighten(@gray-base, 46.7%); // #777
 @gray-lighter:     lighten(@gray-base, 93.5%); // #eee
+
+@base-color: #fff;
+
+@text-default-color: #111;
+@hover-color: #999;
+@active-color: #999;
